CSS: fix #site header on mobile

--- a/app/assets/stylesheets/RonRonnement.css.scss
+++ b/app/assets/stylesheets/RonRonnement.css.scss
@@ -1453,11 +1453,17 @@ img {
   }
 
   #top { display: none; }
-  #site { margin: 10px 5px; }
+  #site {
+    position: static;
+    padding: 0 3px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
 
   #sidebar {
     background: #fff;
     width: 100%;
+	margin-top: 5px;
     #branding {
       float: right;
       width: $PX_BRANDING_LARG;
